--- a/index.html
+++ b/index.html
@@ -4,83 +4,99 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocket Game</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
     <script src="./js/pixi.min.js"></script>
     <style>
-      #canvas-container {
-        width: 800px;
-        height: 800px;
+      * {
+        padding: 0;
+        margin: 0;
       }
+      #canvas-container {
+        width: 60vw;
+        height: 800px; /* Default height */
+        min-height: 800px; /* Ensure it doesn't collapse below this height */
+      }
+
       #popup-container {
-        margin: 5vw;
+        height: 100%;
+        margin: auto;
+        width: 30vw;
       }
     </style>
   </head>
-  <body>
-    <main class="container-fluid">
-      <div class="row">
-        <section id="canvas-container" class="col-9">
+
+  <body class="bg-gray-100">
+    <main>
+      <!-- Flex container -->
+      <section class="flex">
+        <!-- 70% width for canvas-container -->
+        <section id="canvas-container" class="h-[800px]">
           <!-- PIXI Canvas will be appended here -->
         </section>
-        <section id="popup-container" style="display: none" class="col-3">
+        <!-- 30% width for popup-container -->
+        <section id="popup-container" class="" style="display: none">
           <div id="popup-content">
-            <h1>Planet Reached</h1>
-            <p>Congratulations! You've reached a planet.</p>
-            <button id="continue-btn" class="btn btn-primary">
+            <h1 class="text-xl mb-4">Planet Reached</h1>
+            <p class="mb-4">Congratulations! You've reached a planet.</p>
+            <button
+              id="continue-btn"
+              class="bg-blue-500 text-white rounded px-4 py-2 mr-2 hover:bg-blue-600"
+            >
               Continue Traveling
             </button>
-            <button id="secure-landing-btn" class="btn btn-secondary">
+            <button
+              id="secure-landing-btn"
+              class="bg-gray-400 text-white rounded px-4 py-2 hover:bg-gray-500"
+            >
               Secure Landing
             </button>
           </div>
         </section>
-      </div>
+      </section>
     </main>
 
     <script>
-      let container = document.getElementById("canvas-container");
-      let app = new PIXI.Application({
-        width: container.offsetWidth,
-        height: container.offsetHeight,
-        backgroundColor: 0x000000,
-      });
-      container.appendChild(app.view);
+      let container, app;
 
-      window.addEventListener("resize", resizeCanvas);
-
-      function resizeCanvas() {
-        let newWidth = container.offsetWidth;
-        let newHeight = container.offsetHeight;
-
-        app.renderer.resize(newWidth, newHeight);
-
-        // Adjust game elements if needed, e.g., repositioning the rocket at the bottom center
-        rocket.x = newWidth / 2 - rocket.width / 2;
-        rocket.y = newHeight - rocket.height - 10;
-      }
-
-      PIXI.Loader.shared
-        .add("rocket", "./images/player.png")
-        .add("asteroid", "./images/seat.png")
-        .add("planet", "./images/panel.png")
-        .load(() => {
-          setupRocketAsteroid();
-          setupPlanet();
-
-          resizeCanvas(); // Ensure everything is placed correctly after setup
-
-          // Start the game loop after setting up
-          app.ticker.add((delta) => {
-            gameLoopRocketAsteroid(delta);
-            gameLoopPlanet(delta);
-          });
+      document.addEventListener("DOMContentLoaded", function (event) {
+        container = document.getElementById("canvas-container");
+        app = new PIXI.Application({
+          width: container.offsetWidth,
+          height: container.offsetHeight,
+          backgroundColor: 0x000000,
         });
+        container.appendChild(app.view);
+
+        window.addEventListener("resize", resizeCanvas);
+
+        function resizeCanvas() {
+          let newWidth = container.offsetWidth;
+          let newHeight = container.offsetHeight;
+
+          app.renderer.resize(newWidth, newHeight);
+
+          rocket.x = newWidth / 2 - rocket.width / 2;
+          rocket.y = newHeight - rocket.height - 10;
+        }
+
+        PIXI.Loader.shared
+          .add("rocket", "./images/player.png")
+          .add("asteroid", "./images/seat.png")
+          .add("planet", "./images/panel.png")
+          .load(() => {
+            setupRocketAsteroid();
+            setupPlanet();
+
+            resizeCanvas();
+
+            app.ticker.add((delta) => {
+              gameLoopRocketAsteroid(delta);
+              gameLoopPlanet(delta);
+            });
+          });
+      });
     </script>
     <script src="./js/rocketObjects.js"></script>
     <script src="./js/planet.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
