--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         width: 60%;
         max-height: 800px; /* Default height */
         min-height: 300px; /* Ensure it doesn't collapse below this height */
-        height: 100vh;
+        height: 100%;
       }
 
       #popup-container {
