--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
       }
       #canvas-container {
         width: 60%;
-        max-height: 800px; /* Default height */
-        min-height: 300px; /* Ensure it doesn't collapse below this height */
         height: 100%;
       }
 
@@ -28,7 +26,7 @@
   <body class="bg-gray-100">
     <main>
       <!-- Flex container -->
-      <section class="flex">
+      <section class="flex h-400">
         <!-- 70% width for canvas-container -->
         <section id="canvas-container">
           <!-- PIXI Canvas will be appended here -->
