--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         padding: 0;
         margin: 0;
       }
+      #game-container {
+        height: 100vh;
+      }
       #canvas-container {
         width: 60%;
         height: 100%;
@@ -26,7 +29,7 @@
   <body class="bg-gray-100">
     <main>
       <!-- Flex container -->
-      <section class="flex h-400">
+      <section id="game-container" class="flex">
         <!-- 70% width for canvas-container -->
         <section id="canvas-container">
           <!-- PIXI Canvas will be appended here -->
