--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
         margin: 0;
       }
       #game-container {
-        height: 100vh;
+        /* height will be set dynamically by JavaScript */
       }
       #canvas-container {
         width: 60%;
         height: 100%;
       }
-
       #popup-container {
         height: 100%;
         margin: auto;
@@ -35,7 +34,7 @@
           <!-- PIXI Canvas will be appended here -->
         </section>
         <!-- 30% width for popup-container -->
-        <section id="popup-container" class="" style="display: none">
+        <section id="popup-container" style="display: none">
           <div id="popup-content">
             <h1 class="text-xl mb-4">Planet Reached</h1>
             <p class="mb-4">Congratulations! You've reached a planet.</p>
@@ -58,41 +57,48 @@
 
     <script>
       let container, app;
-      container = document.getElementById("canvas-container");
-      app = new PIXI.Application({
-        width: container.offsetWidth,
-        height: container.offsetHeight,
-        backgroundColor: 0x000000,
-      });
-      container.appendChild(app.view);
 
-      window.addEventListener("resize", resizeCanvas);
-
-      function resizeCanvas() {
-        let newWidth = container.offsetWidth;
-        let newHeight = container.offsetHeight;
-
-        app.renderer.resize(newWidth, newHeight);
-
-        rocket.x = newWidth / 2 - rocket.width / 2;
-        rocket.y = newHeight - rocket.height - 10;
+      function setGameContainerHeight() {
+        const gameContainer = document.getElementById("game-container");
+        gameContainer.style.height = window.innerHeight + "px";
       }
 
-      PIXI.Loader.shared
-        .add("rocket", "./images/player.png")
-        .add("asteroid", "./images/seat.png")
-        .add("planet", "./images/panel.png")
-        .load(() => {
-          setupRocketAsteroid();
-          setupPlanet();
+      document.addEventListener("DOMContentLoaded", function () {
+        setGameContainerHeight();
 
-          resizeCanvas();
-
-          app.ticker.add((delta) => {
-            gameLoopRocketAsteroid(delta);
-            gameLoopPlanet(delta);
-          });
+        container = document.getElementById("canvas-container");
+        app = new PIXI.Application({
+          width: container.offsetWidth,
+          height: container.offsetHeight,
+          backgroundColor: 0x000000,
         });
+        container.appendChild(app.view);
+
+        window.addEventListener("resize", setGameContainerHeight);
+        window.addEventListener("resize", resizeCanvas);
+
+        function resizeCanvas() {
+          let newWidth = container.offsetWidth;
+          let newHeight = container.offsetHeight;
+          app.renderer.resize(newWidth, newHeight);
+          rocket.x = newWidth / 2 - rocket.width / 2;
+          rocket.y = newHeight - rocket.height - 10;
+        }
+
+        PIXI.Loader.shared
+          .add("rocket", "./images/player.png")
+          .add("asteroid", "./images/seat.png")
+          .add("planet", "./images/panel.png")
+          .load(() => {
+            setupRocketAsteroid();
+            setupPlanet();
+            resizeCanvas();
+            app.ticker.add((delta) => {
+              gameLoopRocketAsteroid(delta);
+              gameLoopPlanet(delta);
+            });
+          });
+      });
     </script>
     <script src="./js/rocketObjects.js"></script>
     <script src="./js/planet.js"></script>
